--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <h4>Tel:05389156618</h4>
 <h4>E-posta:ilyasfurkanaslan316@gmail.com</h4>
 <h3>twitter hesabına gitmek için  <a href="https://x.com/lyasFurkanAsla4?t=DnAXydSe9JPz5jWtWt3c4A&s=09">tıklayınız</a></h3>
- 
+<h3>github hesabına gitmek için  <a href="https://github.com/furkkanaslan">tıklayınız</a></h3>
 
 <table border="3">
     <tr>
